--- a/rivendell/github-workflows/publish-dev.yaml
+++ b/rivendell/github-workflows/publish-dev.yaml
@@ -61,8 +61,7 @@ jobs:
           fi
 
           # Tack on generic License + npmignore
-          cp ${{ github.workspace }}/common/config/publish/LICENSE ./LICENSE
-          cp ${{ github.workspace }}/common/config/publish/.npmignore ./.npmignore
+          ./common/scripts/write-symlinks.mjs
 
           # Non-main branches should still publish, but never as "dev". "ignore" tag will be cleaned up.
           if [[ ${{ github.ref_name }} == main ]]
