--- a/tools/normalized-react-query/package.json
+++ b/tools/normalized-react-query/package.json
@@ -40,16 +40,20 @@
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.10",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
+    "@types/react": "^18.0.17",
+    "@types/sinon": "^10.0.11",
     "chai": "^4.3.6",
     "expect-type": "^0.13.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "react": "^18.2.0",
-    "typescript": "^4.7.2",
-    "@types/react": "^18.0.17"
+    "react-test-renderer": "^18.2.0",
+    "sinon": "^14.0.0",
+    "typescript": "^4.7.2"
   },
   "peerDependencies": {
     "@tanstack/react-query": "^4.0.10",
