Update eslint/tsconfig to support react

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -12,6 +12,7 @@
         "importsNotUsedAsValues": "remove",
         "incremental": true,
         "isolatedModules": false,
+        "jsx": "react-jsx",
         "lib": [
             "DOM",
             "ESNext"
