--- a/root/jacobley/package.json
+++ b/root/jacobley/package.json
@@ -24,6 +24,7 @@
     "unit-test": "mocha ./dist/tests/unit"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.2.4",
     "@rushstack/eslint-patch": "^1.1.3",
     "@types/node": "^18.0.0",
     "@types/yargs": "^17.0.10",
@@ -35,7 +36,10 @@
     "eslint": "^8.16.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.14.0",
     "eslint-plugin-unicorn": "^43.0.0",
     "named-patch": "workspace:^",
