Re-run rivendell

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -97,6 +97,9 @@ jobs:
           - name: named-patch
             safe-name: named-patch
             path: tools/named-patch
+          - name: normalized-react-query
+            safe-name: normalized-react-query
+            path: tools/normalized-react-query
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
@@ -218,6 +221,9 @@ jobs:
           - name: named-patch
             safe-name: named-patch
             path: tools/named-patch
+          - name: normalized-react-query
+            safe-name: normalized-react-query
+            path: tools/normalized-react-query
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
@@ -652,6 +658,9 @@ jobs:
           - name: named-patch
             safe-name: named-patch
             path: tools/named-patch
+          - name: normalized-react-query
+            safe-name: normalized-react-query
+            path: tools/normalized-react-query
           - name: parse-cwd
             safe-name: parse-cwd
             path: tools/parse-cwd
