--- a/.github/workflows/publish-dev.yaml
+++ b/.github/workflows/publish-dev.yaml
@@ -109,7 +109,7 @@ jobs:
           fi
 
           # Tack on generic License + npmignore
-          ./common/scripts/write-symlinks.mjs
+          node ${{ github.workspace }}/common/scripts/install-run-rush.js write-publish
 
           # Non-main branches should still publish, but never as "dev". "ignore" tag will be cleaned up.
           if [[ ${{ github.ref_name }} == main ]]
