--- a/apps/juniper/package.json
+++ b/apps/juniper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juniper",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "ESM JSON Schema builder for static Typescript inference.",
   "engines": {
     "node": ">=14"
@@ -34,13 +34,7 @@
   },
   "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "types": [
-        "./src/index.ts",
-        "./dist/index.d.ts"
-      ],
-      "default": "./dist/index.js"
-    }
+    ".": "./dist/index.js"
   },
   "dependencies": {
     "escape-string-regexp": "4 - 5"
