--- a/tools/default-import/package.json
+++ b/tools/default-import/package.json
@@ -1,6 +1,6 @@
 {
   "name": "default-import",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Properly handle CJS imports in ESM.",
   "engines": {
     "node": ">=14"
@@ -31,13 +31,7 @@
   },
   "main": "./dist/default-import.js",
   "exports": {
-    ".": {
-      "types": [
-        "./src/default-import.ts",
-        "./dist/default-import.d.ts"
-      ],
-      "default": "./dist/default-import.js"
-    }
+    ".": "./dist/default-import.js"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
