--- a/tools/dependency-order/package.json
+++ b/tools/dependency-order/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dependency-order",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "List monorepo packages in dependency order.",
   "engines": {
     "node": ">=14"
@@ -32,11 +32,7 @@
   "main": "./dist/dependency-order.js",
   "exports": {
     ".": {
-      "types": [
-        "./src/dependency-order.ts",
-        "./dist/dependency-order.d.ts"
-      ],
-      "default": "./dist/dependency-order.js"
+      "node": "./dist/dependency-order.js"
     }
   },
   "dependencies": {
