--- a/tools/enum-to-array/package.json
+++ b/tools/enum-to-array/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enum-to-array",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Convert Typescript Enums to a strongly typed array.",
   "engines": {
     "node": ">=14"
@@ -29,13 +29,7 @@
   },
   "main": "./dist/enum-to-array.js",
   "exports": {
-    ".": {
-      "types": [
-        "./src/enum-to-array.ts",
-        "./dist/enum-to-array.d.ts"
-      ],
-      "default": "./dist/enum-to-array.js"
-    }
+    ".": "./dist/enum-to-array.js"
   },
   "devDependencies": {
     "@types/chai": "^4.3.1",
