--- a/tools/normalized-react-query/package.json
+++ b/tools/normalized-react-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "normalized-react-query",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Wrapper around React Query to enforce type-safe, consistent key-query mappings.",
   "engines": {
     "node": ">=14"
@@ -30,13 +30,7 @@
   },
   "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "types": [
-        "./src/index.ts",
-        "./dist/index.d.ts"
-      ],
-      "default": "./dist/index.js"
-    }
+    ".": "./dist/index.js"
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.10",
