--- a/tools/iso-crypto/package.json
+++ b/tools/iso-crypto/package.json
@@ -17,7 +17,10 @@
     "cryptography",
     "isomorphic",
     "ecdh",
-    "encryption"
+    "encryption",
+    "browser",
+    "aes",
+    "sha"
   ],
   "sideEffects": false,
   "scripts": {
