--- a/tools/iso-crypto/package.json
+++ b/tools/iso-crypto/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iso-crypto",
-  "version": "0.0.0",
-  "description": "Isomorphic crypto functions for browser and NodeJS.",
+  "version": "1.0.0",
+  "description": "Isomorphic cryptographic functions for browser and NodeJS.",
   "engines": {
     "node": ">=16"
   },
@@ -20,7 +20,10 @@
     "encryption",
     "browser",
     "aes",
-    "sha"
+    "sha",
+    "encode",
+    "hash",
+    "ecc"
   ],
   "sideEffects": false,
   "scripts": {
