Restore "main" -> "types" field, required for old ts resolution

--- a/apps/barrelify/package.json
+++ b/apps/barrelify/package.json
@@ -26,6 +26,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/barrelify.js",
   "exports": {
     ".": {
       "types": "./src/barrelify.ts",
