--- a/tools/find-import/package.json
+++ b/tools/find-import/package.json
@@ -27,6 +27,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/find-import.js",
   "exports": {
     ".": {
       "types": "./src/find-import.ts",
