--- a/tools/named-patch/package.json
+++ b/tools/named-patch/package.json
@@ -28,6 +28,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/patch.js",
   "exports": {
     ".": {
       "types": "./src/patch.ts",
