--- a/tools/normalized-react-query/package.json
+++ b/tools/normalized-react-query/package.json
@@ -28,6 +28,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./src/index.ts",
