--- a/tools/packages-list/package.json
+++ b/tools/packages-list/package.json
@@ -27,6 +27,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/packages-list.js",
   "exports": {
     ".": {
       "types": "./src/packages-list.ts",
