--- a/tools/parse-cwd/package.json
+++ b/tools/parse-cwd/package.json
@@ -27,6 +27,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/parse-cwd.js",
   "exports": {
     ".": {
       "types": "./src/parse-cwd.ts",
