--- a/tools/root-package-json/package.json
+++ b/tools/root-package-json/package.json
@@ -27,6 +27,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/root-package-json.js",
   "exports": {
     ".": {
       "types": "./src/root-package-json.ts",
