--- a/tools/static-emitter/package.json
+++ b/tools/static-emitter/package.json
@@ -27,6 +27,7 @@
     "test": "rushx coverage",
     "unit-test": "mocha ./dist/tests/unit"
   },
+  "types": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./src/index.ts",
